SubjectSelectionPanel changed, video working on mac, autoplay enabled